// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DesktopActionsButtons /> with the required props being passed in... should render the button as DISABLED as per the buttonConfig object 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexShrink": 0,
    }
  }
>
  <InjectIntl(Button)
    disabled={true}
    id="wrapup-button"
    key="wrapup-button"
    onClick={[Function]}
    style={
      Object {
        "marginRight": "10px",
      }
    }
    text="End Wrapup"
    type="primaryRed"
  />
</div>
`;

exports[`<DesktopActionsButtons /> with the required props being passed in... should render the button as ENABLED as per the buttonConfig object 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexShrink": 0,
    }
  }
>
  <Connect(WrapUpToggle)
    interaction={
      Object {
        "interactionId": "aaa",
        "status": "work-accepted",
      }
    }
    type=""
  />
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <InjectIntl(Button)
      id="transferButton"
      onClick={[Function]}
      style={
        Object {
          "marginRight": "10px",
          "padding": "9px 17px",
        }
      }
      text={
        Object {
          "defaultMessage": "Transfer",
          "id": "app.containers.DesktopActionsButtons.TransferButton",
        }
      }
      title="transfer"
      type="secondary"
    />
  </div>
  <InjectIntl(Button)
    disabled={false}
    id="hang-up-button"
    key="hang-up-button"
    onClick={[Function]}
    style={
      Object {
        "marginRight": "10px",
      }
    }
    text="Hang Up"
    type="primaryRed"
  />
</div>
`;
